appId: com.brio.client
---
- launchApp
- tapOn: "Profile"
- tapOn: "Messagerie"
- assertVisible: "Messagerie"
- assertVisible:
    anyOf:
      - "Aucune conversation"
      - id: ".*"  # any thread
