appId: com.brio.client
---
- launchApp
- tapOn: "Profile"
- tapOn: "Notifications"
- assertVisible: "Notifications"
