appId: com.brio.client
---
- launchApp
- tapOn: "Profile"
- tapOn: "Programme fidélité"
- assertVisible: "Programme fidélité"
- assertVisible:
    anyOf:
      - "Points"
      - "bronze"
      - "silver"
      - "gold"
      - "BRONZE"
